@@ -1,3 +1,6 @@
+R6.10.1-2.3.3  (jvamosi)
+    Added option to XPS controller not to update resolution
+
 R6.10.1-2.3.2  (mcbrowne)
     Pulling in SmarAct MCS2 fixes from slac-master.
 
